@@ -1,5 +1,5 @@
-All original code copyright 2005, 2006 Bob Cottrell, Eric Hodel, The
-Robot Co-op.  All rights reserved.
+All original code copyright 2005, 2006, 2007 Bob Cottrell, Eric Hodel,
+The Robot Co-op.  All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
@@ -13,8 +13,6 @@ are met:
 3. Neither the names of the authors nor the names of their contributors
    may be used to endorse or promote products derived from this software
    without specific prior written permission.
-4. Redistribution in Rails or any sub-projects of Rails is not allowed
-   until Rails runs without warnings with the ``-w'' flag enabled.
 
 THIS SOFTWARE IS PROVIDED BY THE AUTHORS ``AS IS'' AND ANY EXPRESS
 OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
