@@ -4,11 +4,15 @@
 * Apply patch #6509, parallel implementation of #get_multi.  Submitted
   by Tyler Kovacs.
 * Validate keys.  Disallow spaces in keys or keys that are too long.
-* Perform more validation of server responses.
+* Perform more validation of server responses.  MemCache now reports
+  errors if the socket was not in an expected state.  (Please file
+  bugs if you find some.)
 * Add #incr and #decr.
 * Add raw argument to #set and #get to retrieve #incr and #decr
   values.
 * Also put on MemCacheError when using Cache::get with block.
+* memcache.rb no longer sets $TESTING to a true value if it was
+  previously defined.  Bug #8213 by Matijs van Zuijlen.
 
 = 1.2.1
 
